too much spaces fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2016,7 +2016,6 @@ footer {
 .foot-middle ul li,
 .foot-middle h2 {
   text-align: justify;
-  margin-bottom: 2rem;
 }
 
 .nav-links {
